Update footer - nvidia-air link fix on home page and across all pages. Update footer text decoration, spacing of bottom footer

--- a/themes/netDocs/assets/custom.scss
+++ b/themes/netDocs/assets/custom.scss
@@ -1927,7 +1927,9 @@ footer {
       font-size: 16px;
       font-weight: 400;
       line-height: 30px;
-      text-decoration: none;
+      text-decoration: underline;
+      text-decoration-thickness: 2px;
+      text-underline-offset: .3125em;
 
       &:hover {
         color: $nvidia-green !important;
